--- a/tool/gitignore/stpl/.gitignore
+++ b/tool/gitignore/stpl/.gitignore
@@ -76,3 +76,6 @@ typings/
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+dist/assets/**
+!dist/assets/app*.js
