--- a/tool/eslint/stpl/.eslintrc
+++ b/tool/eslint/stpl/.eslintrc
@@ -1,12 +1,31 @@
 {
     "parser": "babel-eslint",
+    "extends": [
+         "eslint:recommended",
+         "plugin:react/recommended"
+    ],
+    "plugins": [
+       "react"
+    ],
+
     "globals": {
         "Promise": true,
         "describe": true,
         "it": true,
         "React": true
     },
+
+    "parserOptions": {
+      "ecmaVersion": 7,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "experimentalObjectRestSpread": true,
+        "jsx": true
+      }
+    },
+
     "rules": {
+      "no-restricted-imports": ["error", "stardust"],
       "indent": [
         "error",
         4,
@@ -28,11 +47,11 @@
       "eqeqeq": [
         2,
         "allow-null"
-      ]
+      ],
+      "react/jsx-uses-vars": 1
     },
     "env": {
       "browser": true,
       "node": true
-    },
-    "extends": "eslint:recommended"
+    }
 }
